refactoring & imple sendmessage method
